# ProjectBoard

./: .env.example  .gitignore  AI_USAGE.md  ARCHITECTURE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: deps.py  main.py  schemas.py
backend/app/api/v1/: auth.py  projects.py  stream.py  tasks.py
backend/app/core/: config.py  errors.py  ranking.py  security.py
backend/app/db/: events.py  pool.py  queries.py
backend/migrations/: 001_init.sql
backend/tests/: conftest.py  test_api.py  test_ranking.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Board.tsx  TaskCard.tsx  TaskDialog.tsx
frontend/src/hooks/: useProjectStream.ts  useTasks.ts  useTheme.ts
frontend/src/lib/: ranking.ts
frontend/src/pages/: BoardPage.tsx  LoginPage.tsx  ProjectsPage.tsx
frontend/tests/: Board.test.tsx  setup.ts
