[project]
name = "projectboard-api"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "pyjwt>=2.9",            # not python-jose: unmaintained, CVE-2024-33663
    "pwdlib[argon2]>=0.2",   # not passlib: unmaintained, broken by bcrypt 5.x
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
    "ruff>=0.7",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI's Depends()-in-defaults is the whole idiom

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
